Added the user photo to Notifications Module. Now the user photo is showed in open notifications when the photo exists and is public